# QT

./: README.md
docs/: Ch01_SetEnv.md
setting-app/: CMakeLists.txt
setting-app/src/: main.cpp
test-app/: CMakeLists.txt
test-app/src/: main.cpp
test-app/testfolder/: test-file.txt
